# teleop

./: LICENSE  README.md
.github/workflows/: ci.yml  license_check.yml  web.yml
pan_tilt_demo/: .gitignore  API_README.md  CMakeLists.txt  README.md  build.sh  package-lock.json  package.json
pan_tilt_demo/cmake/: Dependencies.cmake  LiveKitSDK.cmake
pan_tilt_demo/include/: l3g4200d_gyro.h  ostream_log.h  pan_tilt_controller.h  pan_tilt_livekit.h  pan_tilt_topics.h  realsense_camera.h  stream_format.h
pan_tilt_demo/setup/gyroscope/: CMakeLists.txt  gyro.cpp  gyro_min_i2c.py
pan_tilt_demo/setup/servos/: CMakeLists.txt  keyboard_controller.cpp  program_eprom.cpp  scan.cpp
pan_tilt_demo/src/: pan_tilt_controller.cpp  pan_tilt_livekit.cpp  pan_tilt_main.cpp  realsense_camera.cpp  teleop_main.cpp
rover/: .gitignore  API_README.md  CMakeLists.txt  README.md
rover/cmake/: Dependencies.cmake  LiveKitSDK.cmake
rover/include/: arducam_camera.h  keyboard_controller.h  rover.h  rover_args.h  rover_config.h  rover_serial_bus.h  rover_topics.h  teleop_msgs.h
rover/src/: arducam_camera.cpp  keyboard_controller.cpp  rover.cpp  rover_args.cpp  rover_main.cpp  rover_serial_bus.cpp  simple_participant.cpp  teleop_main.cpp
rover/src/tests/: camera_capture_test.cpp  keyboard_control_test.cpp  serial_bus_logger.cpp
rover/src/tests/serial_bus/: motor_control.cpp
rover/tests/: rover_serial_bus_test.cpp  teleop_msgs_test.cpp
web/: .env.example  .oxfmtrc.json  .oxlintrc.base-nextjs.json  .oxlintrc.base.json  .oxlintrc.json  README.md  package-lock.json  package.json  pnpm-lock.yaml
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/robot/: page-client.tsx  page.tsx
web/src/app/rover/: page-client.tsx  page.tsx
web/src/components/: app.tsx  bottom-bar.tsx  button.tsx  debug-panel.tsx  dialog.tsx  gyroscope.tsx  joystick.tsx  mode-toggle.tsx  scale-horizontal.tsx  scale-value.tsx  scale-vertical.tsx  status-bar.tsx  video-dialog.tsx
web/src/components/ui/: button.tsx  toaster.tsx
web/src/hooks/: use-acquire-control.ts  use-arrow-key-degrees.ts  use-arrow-key.ts  use-connection.ts  use-control-cmd-track.ts  use-data-tracks.ts  use-gamepad-connected.ts  use-gyro.ts  use-imu.ts  use-pad-buttons.ts  use-pan-tilt.ts  use-repeat-step.ts  use-rover-control-cmd-track.ts  use-servo-telemetry-from-data-tracks.ts  use-video-fit-container.ts  use-video-fit-screen.ts
web/src/lib/: acquire-control.ts  control-cmd.ts  fonts.ts  rover.ts  servo-state.ts  types.ts
